# auth-service

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  docker-compose.yml
migrations/: 001_create_users_table.sql  002_add_totp.sql  003_add_github_oauth.sql  004_add_audit_logs.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/errors/: mod.rs
src/handlers/: auth.rs  health.rs  mod.rs  oauth.rs  totp.rs
src/middleware/: auth_guard.rs
src/models/: mod.rs  totp.rs  user.rs
src/services/: audit_service.rs  auth_service.rs  lockout_service.rs  mod.rs  rate_limiter.rs  reset_service.rs  token_service.rs  totp_service.rs
src/utils/: mod.rs  password.rs  validator.rs
