[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A robust authentication service built with Rust and Actix-web"
repository = "https://github.com/yourusername/auth-service"
license = "MIT"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# UUID & DateTime
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
oauth2 = "4"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Configuration
dotenvy = "0.15"

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# HTTP client (for OAuth)
reqwest = { version = "0.11", features = ["json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Random generation
rand = "0.8"

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "auth-service"
path = "src/main.rs"
